Remove unsupported parameter for JDK 8